# cmake-example-external-project

./: .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  README.md
src/app1/: CMakeLists.txt
src/app1/src/: main.cpp
src/app2/: CMakeLists.txt
src/app2/src/: main.cpp
src/lib1/: CMakeLists.txt
src/lib1/include/lib1/: api.h
src/lib1/src/: lib1.cpp
src/lib2/: CMakeLists.txt
src/lib2/include/lib2/: api.h
src/lib2/src/: lib2.cpp
